# zsign-rust

./: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: build.yml
src/: lib.rs
zsign/: zsign.cpp  zsign.h
zsign/common/: common_win32.h  getopt.cpp  getopt.h  iconv.cpp  iconv.h  util.cpp
