[package]
name = "zsign-rust"
version = "0.1.0"
edition = "2024"
authors = ["Nicholas Sharp <nab@nabdev.me>"]
description = "Rust bindings for zsign"
license = "MIT"
build = "build.rs"
repository = "https://github.com/nab138/zsign-rust"

[dependencies]

[build-dependencies]
bindgen = "0.72.0"
cc = { version = "1.2.31", features = ["parallel"] }
openssl-sys = { version = "0.9", features = ["vendored"] }