[package]
name = "zsign-rust"
version = "0.1.3"
edition = "2024"
authors = ["Nicholas Sharp <nab@nabdev.me>"]
description = "Rust bindings for zsign"
documentation = "https://docs.rs/zsign-rust"
license = "MIT"
build = "build.rs"
repository = "https://github.com/nab138/zsign-rust"
readme = "README.md"
keywords = ["zsign", "ios", "codesign"]

[dependencies]
thiserror = "2.0.12"
openssl = "0.10"
openssl-sys = { version = "0.9" }

[build-dependencies]
bindgen = "0.72.0"
cc = { version = "1.2.31", features = ["parallel"] }

[features]
vendored-openssl = ["openssl-sys/vendored"]
